Create design of header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <li><a href='#main' name='top'>Main</a></li>
                 <li><a href='#html'>HTML</a></li>
                 <li><a href='#css'>CSS</a></li>
-                <li><a href='#contact'>Contacts</a></li>
+                <li><a href='#about'>About</a></li>
             </ul>
         </nav>
         <h1>HTML and CSS Cheat sheet</h1>
@@ -27,7 +27,7 @@
         </section>
         <section class = 'html'>
             <h2><a name='html'>HTML</a></h2>
-            <article>html editing...Back to the <a href='#top'>table of contents</a></article>
+            <article>HTML (HyperText Markup Language) is the most basic building block of the Web. It defines the meaning and structure of web content. Other technologies besides HTML are generally used to describe a web page's appearance/presentation (CSS) or functionality/behavior (JavaScript). Back to the <a href='#top'>table of contents</a></article>
             <table>
                 <caption>Usefull tags of HTML</caption>
                 <thead>
@@ -226,8 +226,8 @@
 
     </main>
     <footer>
-        <section class = 'contact'>
-            <h3><a name='contact'>Contacts</a></h3>
+        <section class = 'about'>
+            <h3><a name='about'>About</a></h3>
             <p>Hi there! My name is Igor and i`m junior full-stack developer. I would like to become really cool developer, so i practice, practice and practice until my fingers to the bones <span>Here there should by laugthing emoji</span>. This project one of some, which i repost on Github. This is my cheat sheet. If you want to write you opinion about this cite or see the rest of the project, check my <a href='https://github.com/IgorZvezdilin' target='_blank'>Github</a>.Back to the <a href='#top'>table of contents</a></p>
 
         </section>
